core: DB 및 키 관련 설정 추가

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,70 @@
 spring:
   application:
     name: draw-server
+  datasource:
+    url: jdbc:mysql://draw-db-dev.canyydkgjrr5.ap-northeast-2.rds.amazonaws.com:3306/draw?serverTimezone=UTC
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+        format_sql: true
+    open-in-view: false
+    hibernate:
+      ddl-auto: none
 
 server:
   error:
     whitelabel:
       enabled: false
   shutdown: graceful
+
+auth:
+  jwt:
+    access:
+      secret: "access-secret-key"
+    refresh:
+      secret: "refresh-secret-key"
+
+kakao:
+  auth:
+    rest-api-key: ${KAKAO_REST_API_KEY}
+
+
+---
+spring:
+  profiles:
+    active: prod
+
+  datasource:
+    url: jdbc:mysql://draw-db-dev.canyydkgjrr5.ap-northeast-2.rds.amazonaws.com:3306/draw?serverTimezone=UTC
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
+  jpa:
+    show-sql: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+        format_sql: true
+    open-in-view: false
+    hibernate:
+      ddl-auto: none
+
+server:
+  error:
+    whitelabel:
+      enabled: false
+  shutdown: graceful
+
+auth:
+  jwt:
+    access:
+      secret: ${JWT_ACCESS_SECRET}
+    refresh:
+      secret: ${JWT_REFRESH_SECRET}
+
+kakao:
+  auth:
+    rest-api-key: ${KAKAO_REST_API_KEY}
