--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -28,6 +28,9 @@ auth:
     refresh:
       secret: "refresh-secret-key"
 
+sentry:
+  dsn: ${SENTRY_DSN}
+
 kakao:
   auth:
     rest-api-key: ${KAKAO_REST_API_KEY}
