core: github Action 배포 및 PR룰 변경

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,8 +4,9 @@ on:
   push:
     branches:
       - develop
+      - master
   pull_request:
-    branches: [ master, develop ]
+    branches: [ prod, master, develop ]
 
 jobs:
   build:
