--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -48,7 +48,7 @@ kakao:
     client-secret: ${KAKAO_CLIENT_SECRET}
     js-key: ${KAKAO_JS_KEY}
     rest-api-key: ${KAKAO_REST_API_KEY}
-    callback-url: http://localhost:8080/auth/v1/local/kakao/login
+    callback-url: http://localhost:5173/callback/kakao
 
 apple:
   auth:
