feat: 프로모션 피쳐 개발

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -20,7 +20,7 @@ spring:
         format_sql: true
     open-in-view: false
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
 
 server:
   error:
