--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,3 +1,4 @@
+
 spring:
   application:
     name: draw-server
@@ -21,6 +22,8 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: update
+  profiles:
+    active: test
 
 server:
   error:
